--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <meowu.commons-redis.version>0.0.1</meowu.commons-redis.version>
         <meowu.commons-utils.version>0.0.1</meowu.commons-utils.version>
         <mybatis.springboot-starter.version>2.1.4</mybatis.springboot-starter.version>
+        <mysql.version>8.0.27</mysql.version>
+        <redis.version>3.6.0</redis.version>
         <springboot.starter-parent.version>2.4.5</springboot.starter-parent.version>
         <springcloud.dependencies.version>2020.0.2</springcloud.dependencies.version>
     </properties>
@@ -71,6 +73,20 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.springboot-starter.version}</version>
+            </dependency>
+
+            <!-- mysql -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- redis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${redis.version}</version>
             </dependency>
 
             <!-- alibaba druid -->
