--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <mybatis.springboot-starter.version>2.1.4</mybatis.springboot-starter.version>
         <mysql.version>8.0.27</mysql.version>
         <redis.version>3.6.0</redis.version>
-        <springboot.starter-parent.version>2.4.5</springboot.starter-parent.version>
+        <springboot.starter-parent.version>2.5.6</springboot.starter-parent.version>
         <springcloud.dependencies.version>2020.0.2</springcloud.dependencies.version>
     </properties>
 
@@ -164,6 +164,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${apache.maven-jar.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${springboot.starter-parent.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
